--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.8",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpstan/phpstan": "^0.12.48",
