--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8",
+        "php": "^7.4|^8.0",
         "google/apiclient": "^2.0",
         "laravel/lumen-framework": "^8.0"
     },
