--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "mockery/mockery": "^1.3.1",
         "phpstan/phpstan": "^0.12.48",
         "phpunit/phpunit": "^9.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
